--- a/index.html
+++ b/index.html
@@ -220,8 +220,9 @@
     <section id="section1" class="section">
         <h2 class="chapter-title">Chapter 1: The Smile that Started It All</h2>
         <div class="scroll-text">
-            <p>Remember when we first met? This chapter tells the story of how our friendship began. From the awkward first conversations to the inside jokes that soon followed, this is where it all started.</p>
-            <p>This space is ready for you to fill with those special memories that marked the beginning of your incredible friendship journey.</p>
+            <p>I would like to cherish the day, when I was welcomed with a bright smile. </p>
+            <p>As we started knowing each other, I understood that she is the kindest person.</p>
+            <p>I feel so happy, to spend time, talk with her. If I solve aleast some of her problems, I feel that I have reduced some portion of her tasks from her routine.</p
         </div>
     </section>
 
