--- a/index.html
+++ b/index.html
@@ -221,24 +221,24 @@
         <h2 class="chapter-title">Chapter 1: The Smile that Started It All</h2>
         <div class="scroll-text">
             <p>I would like to cherish the day, when I was welcomed with a bright smile. </p>
+            <p>I have ever meet, she simply understands the pain or happiness in one’s eyes and try to find the solutions.</p>
+            <p>I feel so happy, to spend time, talk with her. If I solve aleast some of her problems, I feel that I have reduced some portion of her tasks from her routine.</p>
+            <p>She patiently sits along and hears my thoughts and she prays that I need to be happy 😊.</p>
             <p>As we started knowing each other, I understood that she is the kindest person.</p>
-            <p>I feel so happy, to spend time, talk with her. If I solve aleast some of her problems, I feel that I have reduced some portion of her tasks from her routine.</p
         </div>
     </section>
 
     <section id="section2" class="section">
         <h2 class="chapter-title">Chapter 2: My Cheer Leader</h2>
         <div class="scroll-text">
-            <p>Every friendship has its adventures! This chapter highlights the trips we've taken, the challenges we've overcome, and the spontaneous moments that turned into unforgettable memories.</p>
-            <p>Add photos and stories about road trips, late night conversations, and those "you had to be there" moments that you two share.</p>
+            <p>Every time we cook together or observe her cooking , learn something new as she is so good in cooking. She tries her best to make delicious food for her beloved and she keeps the efforts.If I would given a chance, I would write pages of details about her qualities that inspires herfriends and beloved ones.</p>
         </div>
     </section>
 
     <section id="section3" class="section">
         <h2 class="chapter-title">Chapter 3: My Happy Place</h2>
         <div class="scroll-text">
-            <p>True friendship isn't just about the good times. It's about being there when things get tough. This chapter celebrates how we've supported each other through life's challenges.</p>
-            <p>This is the perfect place to acknowledge the strength of your friendship and how you've been there for each other during difficult moments.</p>
+            <p>we visited temple as it was one year of hers come her to pursue her dreams. Every time we cook together or observe her cooking , learn something new as she is so goodin cooking. She tries her best to make delicious food for her beloved and she keeps the efforts.If I would given a chance, I would write pages of details about her qualities that inspires her friends and beloved ones.</p>
         </div>
     </section>
 
@@ -253,16 +253,14 @@
     <section id="section5" class="section">
         <h2 class="chapter-title">Chapter 5: Laugher in the Stars</h2>
         <div class="scroll-text">
-            <p>This chapter is all about celebrating the amazing person that you are. Your kindness, your humor, your strength – all the qualities that make me grateful to have you as my best friend.</p>
-            <p>Here's where you can add personal compliments and appreciation for the specific qualities that make your friend unique and special to you.</p>
+            <p>One day, we were walking to explore the pleasant climate and I got pleasant present from her, she purchased me a cute panda as she remembers I like my panda. As present, I also got a lion 🦁 phone case for my phone. I felt so happy, I felt there is also a person who remembers my favorites and purchases for me 😇 .</p>
         </div>
     </section>
 
     <section id="section6" class="section">
         <h2 class="chapter-title">Chapter 6: My Safe Place</h2>
         <div class="scroll-text">
-            <p>Happy Birthday to the most amazing friend anyone could ask for! This final chapter is filled with birthday wishes and dreams of all the adventures yet to come in our friendship.</p>
-            <p>Express your birthday wishes and share your hopes for future memories you'll create together in the years ahead.</p>
+            <p>I would also like to add, with her patience she has made me understand, how well a lady can make her self look pretty by adding basic care about oneself. I’m implementing her ideas to look better in an occasional togethers. I would say, she is understands silence and happiness in oneself with expressing. She is really blessing🙈 I would like it cherish all of these, moments.</p>
         </div>
     </section>
 
