--- a/index.html
+++ b/index.html
@@ -245,8 +245,7 @@
     <section id="section4" class="section">
         <h2 class="chapter-title">Chapter 4: My Secert Keeper</h2>
         <div class="scroll-text">
-            <p>The language of friendship is often spoken in inside jokes that no one else understands. This chapter is a collection of our funniest moments and the jokes that still make us laugh years later.</p>
-            <p>Fill this section with references to those hilarious moments that define your friendship and bring smiles whenever remembered.</p>
+            <p>We might not have pictures, together. But we memories that last with me forever and ever. I understand, I have given her trouble with my actions that express a much caring on her, in front of her friends, but she patiently accepts my mistakes and she never expressed her feelings. I will be grateful for accepting my actions, that made her feel bad. I feel, I should have met her before so that I could get more time to understand more things about her😊. I’m blessed to have a friend like her😇</p>
         </div>
     </section>
 
