--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <header>
         <div class="header-content">
             <h1>Happy Birthday to My Best Friend!</h1>
-            <p style="font-size: 1.5rem;">Welcome to world, where we celebrate the birthday of my best friend, who understands, cares , cherish</p>
+            <p style="font-size: 1.5rem;">Welcome to world, where we celebrate the birthday of my best friend, who understands, cares, inspire.</p>
             <div class="birthday-cake">
                 <svg width="200" height="200" viewBox="0 0 200 200">
                     <!-- Cake base -->
