--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <header>
         
     <h1>Happy Birthday to My Best Friend!</h1>
-  <p style="font-size: 1.5rem;">Here's a slice of love, laughter, and layered cake — just for you!</p>
+  <p style="font-size: 1.5rem;">Welcome to my world, where I would to celebrate birthday of dearest friend, who's cares is unmeasurable, affection is precious, Journey is an inspiration, Concern for her beloved is unconditional </p>
 
   <div class="cake-slice">
     <svg width="300" height="250" viewBox="0 0 300 250" xmlns="http://www.w3.org/2000/svg">
