--- a/index.html
+++ b/index.html
@@ -472,8 +472,7 @@ footer::before {
     <div class="heart"></div>
 
     <p>More than a friend, you're family. Your presence is a gift, your friendship a blessing ❤️</p>
-    <p>© <span id="current-year"></span> | Birthday Celebration's of Best Friend</p>
-    <p>© <span id="current-year"></span> <span id="current-date"></span> | Birthday Celebration's of Best Friend |</p>
+    <p>© <span id="current-year"></span> <span id="current-date"></span> | Birthday Celebration's of Best Friend </p>
 </footer>
 
 <script>
