--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ footer::before {
     <header>
         <div class="header-content">
             <h1>Happy Birthday Harshitha 😊</h1>
-            <p style="font-size: 1.5rem;">Welcome to my world, where I would to celebrate birthday of dearest Best Friend 😊,  whose care is unmeasurable😊, affection is precious😊, journey is an inspiration😊, concern for her beloved is unconditional😊.</p>
+            <p style="font-size: 1.5rem;">Welcome to my world, where I would to celebrate birthday of dearest Best Friend 😊,  her care is unmeasurable😊, affection is precious😊, journey is an inspiration😊, concern for her beloved is unconditional😊.</p>
             <div class="birthday-cake">
                 <svg width="200" height="200" viewBox="0 0 200 200">
                     <!-- Cake base -->
